// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackStatus creates correct snapshot for status types 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter StackStatus-stackStatus-1 css-atadlh-MuiTypography-root"
    style="background-color: rgb(196, 196, 196); color: rgb(4, 4, 4);"
    type="caption"
  >
    Requested
  </p>
</div>
`;

exports[`StackStatus creates correct snapshot for status types 2`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter StackStatus-stackStatus-1 css-atadlh-MuiTypography-root"
    style="background-color: rgb(168, 168, 168); color: rgb(0, 0, 0);"
    type="caption"
  >
    Creating
  </p>
</div>
`;

exports[`StackStatus creates correct snapshot for status types 3`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter StackStatus-stackStatus-1 css-atadlh-MuiTypography-root"
    style="background-color: rgb(176, 176, 176); color: rgb(3, 3, 3);"
    type="caption"
  >
    Ready
  </p>
</div>
`;

exports[`StackStatus creates correct snapshot for status types 4`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter StackStatus-stackStatus-1 css-atadlh-MuiTypography-root"
    style="background-color: rgb(196, 196, 196); color: rgb(4, 4, 4);"
    type="caption"
  >
    Suspended
  </p>
</div>
`;

exports[`StackStatus creates correct snapshot for status types 5`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter StackStatus-stackStatus-1 css-atadlh-MuiTypography-root"
    style="background-color: rgb(213, 213, 213); color: rgb(0, 0, 0);"
    type="caption"
  >
    Unavailable
  </p>
</div>
`;
